# fbmath

./: .gitmodules  CMakeLists.txt  main.cpp
geogebra/: sphere-ray.ggb  triangle stuff.ggb
include/: CMakeLists.txt  contants.hpp  fbmath.hpp  intersection.hpp  number.hpp  ostream_interop.hpp  trigonometry.hpp  vec2.hpp  vec3.hpp
include/2D/: ray.hpp  unfinished_circle-ray-intersection.hpp  vec2.hpp
include/fbmath/: boundingbox.hpp  circle.hpp  contants.hpp  intersection.hpp  matrix.hpp  number.hpp  ostream_interop.hpp  ostream_latex.hpp  ray.hpp  sphere.hpp  trigonometry.hpp  valueutil.hpp  vec2.hpp  vec3.hpp
include/fbmath/2D/: boundingbox.hpp  circle-ray-intersection.hpp  circle.hpp  ray.hpp  vec2.hpp
include/fbmath/3D/: vec3.hpp
include/fbmath/algorithm/: definiteness.hpp
include/fbmath/intersection/: circle-ray-intersection.hpp  plane-ray-intersection.hpp  sphere-ray-intersection.hpp
include/fbmath/primitives/: boundingbox.hpp  circle.hpp  matrix.hpp  plane.hpp  primitive-predeclaration.hpp  ray.hpp  sphere.hpp  vec2.hpp  vec3.hpp
include/fbmath/simd/: def.hpp
include/fbmath/simd/primitives/: vec3s.hpp
tests/: boundingboxtest.cpp  boundingboxtest.hpp  circletest.cpp  circletest.hpp  definitenesstest.cpp  matrixtest.cpp  ray2test.cpp  raytest.cpp  raytest.hpp  simdvec3buffertest.cpp  spheretest.cpp  vec2test.cpp  vec2test.hpp
